# genmech_backend

./: pyproject.toml  requirements.txt
app/: main.py
app/core/: security.py
app/db/: database.py  session.py
app/models/: company.py  engineer.py  service_assignment.py  user.py
app/routers/: admin.py  auth.py  engineer.py
app/schemas/: user.py
